welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: not found: value then
		then {if (!porteBiscuit())
                ^Balin:9: error: not found: value then
				then {prendBiscuit()}
                                ^