welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estFaceMur())
	{if ((!estSurBiscuit()))
		then {if (!porteBiscuit())
				then	{recule()}
				else	{avance()}
			}
		else	{if (!porteBiscuit())
				then {prendBiscuit()}
				else	{recule();
					poseBiscuit()}
			}
	
	}
gauche()
avance()
gauche()
avance()